# pyprefix

./: LICENSE  README.md  pyproject.toml
examples/: sample.py
pyprefix/: __init__.py  analyze.py  check.py  cli.py  codemap.py  codemod.py  graph.py  standard.py  tools.py
tests/: test_core.py  test_graph.py
