[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprefix"
version = "0.1.0"
description = "Typed, greppable Python names — prefix functions/classes/methods (py_function_/py_class_/py_method_) and standardize instance names so structural search and code maps are deterministic. Checker + verified codemod + code map."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Amarel Taylor Scott" }]
keywords = ["codemod", "naming", "convention", "ast", "code-map", "refactor", "linter", "grep"]
dependencies = []

[project.scripts]
pyprefix = "pyprefix.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["pyprefix"]
